--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My first page.</title>
 </head>
 <body>
-    
+    <p>This is a Paragraph.This is a Paragraph.This is a Paragraph.This is a Paragraph.This is a Paragraph.This is a Paragraph.This is a Paragraph.This is a Paragraph.</p>
+
+<a href="https://www.google.co.in/?client=safari&channel=mac_bm">Google</a>
+<br>
+<a href="www.instagram.com">instagram</a>
 </body>
 </html>
