--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first page.</title>
 </head>
-<body>
+<>
     <p>This is a Paragraph.This is a Paragraph.This is a Paragraph.This is a Paragraph.This is a Paragraph.This is a Paragraph.This is a Paragraph.This is a Paragraph.</p>
 
 <a href="https://www.google.co.in/?client=safari&channel=mac_bm">Google</a>
 <br>
-<a href="www.instagram.com">instagram</a>
+<a href="www.instagram.com">instagram</a><br>    <!--ABSOLUTE LINK-->
+<a href="/hello.html">Hello webpage</a>    <!--RELATIVE LINK-->
+<img src="https://www.tinyminymo.com/cdn/shop/products/Pretty-Unicorn-Notebook-1_1200x1200.jpg?v=1741540958" alt="notebook_spiral" height="100"><br>
+    <big>It is big tag</big>
+    <small>This is small tag</small>
 </body>
 </html>
