--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first page.</title>
 </head>
-<>
     <p>This is a Paragraph.This is a Paragraph.This is a Paragraph.This is a Paragraph.This is a Paragraph.This is a Paragraph.This is a Paragraph.This is a Paragraph.</p>
 
 <a href="https://www.google.co.in/?client=safari&channel=mac_bm">Google</a>
@@ -14,6 +13,9 @@
 <a href="/hello.html">Hello webpage</a>    <!--RELATIVE LINK-->
 <img src="https://www.tinyminymo.com/cdn/shop/products/Pretty-Unicorn-Notebook-1_1200x1200.jpg?v=1741540958" alt="notebook_spiral" height="100"><br>
     <big>It is big tag</big>
+    <hr>   <!-- For making a line-->
     <small>This is small tag</small>
+    <p>H<sub>2</sub>O</p>
+    <p>3<sup>2</sup>=9</p>
 </body>
 </html>
