DOM part finished

--- a/DOM/index.html
+++ b/DOM/index.html
@@ -24,8 +24,11 @@
     </div> -->
 
 
-    <div id="box" name="JSDiv">This is a div.</div>
-    <p class="para">This is a simple line.</p>
+    <!-- <div id="box" name="JSDiv">This is a div.</div>
+    <p class="para">This is a simple line.</p> -->
+
+    <button id="btn1">click me</button>
+    <div>This is a box</div>
     <script src="script.js"></script>
 </body>
 </html>
