DOM concept completed

--- a/DOM/index.html
+++ b/DOM/index.html
@@ -12,7 +12,7 @@
     <p class="myClass">This is something which always i wanted to learn.</p>
     <p>This is my second paragraph and here i can say this nothing just ignore this.</p>
     <button id="myId">Click Me</button> -->
-    <div>
+    <!-- <div>
         <h3>Fruits</h3>
         <ul>
             <li class="fruit">Apple</li>
@@ -21,7 +21,11 @@
             <li class="fruit">Grapes</li>
             <li class="fruit">Pineapple</li>
         </ul>
-    </div>
+    </div> -->
+
+
+    <div id="box" name="JSDiv">This is a div.</div>
+    <p class="para">This is a simple line.</p>
     <script src="script.js"></script>
 </body>
 </html>
